# translation_bench

./: README.md  pyproject.toml
configs/: example.yaml  gemma_3_12B_it_afridocmt_health.yaml  gemma_3_12B_it_flores_plus.yaml  gemma_3_4B_it_afridocmt_health.yaml  gemma_3_4B_it_flores_plus.yaml  translategemma_12B_it_afridocmt_health.yaml  translategemma_12B_it_flores_plus.yaml  translategemma_4B_it_afridocmt_health.yaml  translategemma_4B_it_flores_plus.yaml
docs/: index.html
results/baseline/: gemma-3-12b-it_afridocmt_dochealth5_en_ha.json  gemma-3-12b-it_afridocmt_dochealth5_en_yo.json  gemma-3-12b-it_afridocmt_dochealth5_en_zu.json  gemma-3-12b-it_afridocmt_dochealth5_yo_en.json  gemma-3-12b-it_afridocmt_dochealth5_zu_en.json  gemma-3-4b-it_afridocmt_dochealth5_en_sw.json  gemma-3-4b-it_afridocmt_dochealth5_en_yo.json  gemma-3-4b-it_afridocmt_dochealth5_ha_en.json  translategemma-12b-it__afridocmt_dochealth5_en_sw.json  translategemma-12b-it__afridocmt_dochealth5_en_yo.json  translategemma-12b-it__afridocmt_dochealth5_ha_en.json  translategemma-4b-it__afridocmt_dochealth10_yo_en.json  translategemma-4b-it__afridocmt_dochealth5_am_en.json  translategemma-4b-it__afridocmt_dochealth5_en_ha.json  translategemma-4b-it__afridocmt_dochealth5_en_sw.json  translategemma-4b-it__afridocmt_dochealth5_en_zu.json  translategemma-4b-it__afridocmt_dochealth5_zu_en.json
scripts/: build_results_page.py  run_all_configs.sh
translation_bench/: __init__.py  pipeline.py
translation_bench/data/: afridoct.py  data_class.py  flores_plus.py
(+63 files in other folders)
