[project]
name = "translation-bench"
version = "0.1.0"
description = "A translation benchmarking framework with markdown-based benchmarks"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "torch>=2.0",
    "transformers>=4.40",
    "datasets>=2.18",
    "accelerate>=0.28",
    "peft>=0.10",
    "trl>=0.8",
    "sacrebleu>=2.4",
    "evaluate>=0.4",
    "sentencepiece>=0.2",
    "protobuf>=4.0",
    "pyyaml>=6.0",
    "click>=8.0",
    "rich>=13.0",
    "jinja2>=3.0",
    "tqdm>=4.0",
    "httpx>=0.27",
    "pandas>=2.0",
    "vllm>=0.15.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "pre-commit>=3.0",
]
vllm = [
    "vllm>=0.4",
]
api = [
    "openai>=1.0",
    "anthropic>=0.25",
]

[project.scripts]
translation-bench = "translation_bench.cli:main"
translation-pipeline = "translation_bench.pipeline:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
